# first_django_job_test

./: .gitignore  Dockerfile  Pipfile  README.MD  old_pyproject.toml  pyproject.toml
backend/: db.sqlite3
backend/app/: admin.py  consumers.py  models.py  serializers.py  urls.py  views.py
backend/app/migrations/: 0001_initial.py
backend/app/services/: email_tasks.py
backend/core/: asgi.py  middleware.py  settings.py  urls.py  yasg.py
backend/static/admin/css/: base.css
backend/staticfiles/: staticfiles.json
backend/templates/admin/: base.html
